# cloth_simulation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cloth_code.cpp  cloth_code_omp.cpp  cloth_code_omp.h  cloth_code_opt.cpp  cloth_code_sse.cpp  cloth_code_vect_omp.cpp  cloth_param.h  kernel_main.cpp  kernel_main_omp.cpp  kernel_main_omp_papi.cpp  kernel_main_papi.cpp
docs/: roofline.md  serial.md  sse.md
jobs/: auto_run.py  batch_job
plots/: plot.ipynb  roofline_omp.html
pyversion/: ball.py  cloth.py  main.py  utils.py
